# LABEL_HETROD

./: .gitignore  README.md  change_dict_to_parquet.py  prepare_sample_data.py  pyproject.toml  requirements.txt  start.py  test.py
label_tool/: UI.py  controller.py
refine_tool/: UI.py  controller.py
sample_data/: 00_tracks.csv  00_tracksMeta.csv  README.md  area_color_class.json  labeled_scenarios.json  pet_distance_dict.json  trackid_class.json
scenario_video_export/: generate_labeled_videos.py
